# qq_bot

./: .env.example  .gitignore  CHANGELOG.md  README.md  bot.py  pyproject.toml  start_all.ps1  stop_all.ps1  一键启动.bat  停止.bat
data/: roco_pets.json
data/roco_pet_details/: 001-圣光迪莫.json  001-迪莫.json  002-喵喵.json  003-喵呜.json  004-叶冕魔力猫.json  004-魔力猫.json  005-火花.json  006-焰火.json  007-火神.json  007-烈火战神.json  008-水蓝蓝.json  009-波波拉.json  010-圣水守护.json  010-水灵.json  011-鸭吉吉国王.json  011-鸭吉吉（急急急鸭）.json  011-鸭吉吉（燃了鸭）.json  011-鸭吉吉（等一等鸭）.json  011-鸭吉吉（紧实的样子）.json  011-鸭吉吉（蓬松的样子）.json  011-鸭吉吉（起来鸭）.json  012-板板壳（本来的样子）.json  012-板板壳（蜕皮时的样子）.json  013-咔咔壳（本来的样子）.json  013-咔咔壳（蜕皮时的样子）.json  014-水泡壳（本来的样子）.json  014-水泡壳（蜕皮时的样子）.json  015-锥尾羊.json  016-铃兰羊.json  017-花影羚羊.json  018-雪绒鸟（夏天的样子）.json  018-雪绒鸟（春天的样子）.json  018-雪绒鸟（本来的样子）.json  018-雪绒鸟（秋天的样子）.json  019-冬羽雀（夏天的样子）.json  019-冬羽雀（春天的样子）.json  019-冬羽雀（本来的样子）.json  019-冬羽雀（秋天的样子）.json  020-岚鸟（夏天的样子）.json  020-岚鸟（春天的样子）.json  (+455 more)
scripts/: fetch_roco_pet_detail.py  generate_roco_pet_cards.py
src/qq_bot/: __init__.py  config.py  (+1 more)
tests/: test_ai_chat_plugin.py  test_ai_client.py  test_chat_memory.py  test_commands_plugin.py  test_config.py  test_help_text.py  test_memory_prompt.py  test_message_formatting.py  test_onebot_send.py  test_project_imports.py  test_prompt.py  test_roco_bwiki.py  test_roco_counter.py  test_roco_counter_plugin.py  test_roco_knowledge.py  test_roco_pet_cards.py  test_roco_pets.py  test_roco_plugin.py  test_roco_skills.py  test_scheduled_sender.py  test_search.py  test_startup_scripts.py  test_version.py
(+35 files in other folders)
