[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qq-bot"
version = "0.1.0"
description = "Custom QQ group bot built with NoneBot2 and OneBot v11"
requires-python = ">=3.11"
dependencies = [
  "nonebot2[fastapi]>=2.4.0,<3.0.0",
  "nonebot-adapter-onebot>=2.4.0,<3.0.0",
  "nonebot-plugin-apscheduler>=0.5.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pillow>=10.0.0,<12.0.0",
  "pydantic-settings>=2.0.0,<3.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "ruff>=0.6.0,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
